--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ cache:
   - bundler
   - cocoapods
 
+before_install: rvm use $RVM_RUBY_VERSION
+
 install:
-  - bundle install
+  - bundle install --without=documentation --path ../travis_bundle_dir
   # too slow
   #- bundle exec pod repo update --silent
   - bundle exec pod install --project-directory=Example
